--- a/index.html
+++ b/index.html
@@ -154,6 +154,24 @@
                         <a href="./json/uzbekclothes.json" download="">Start download</a>
                     </div>
                 </div>
+                <div class="box">
+                    <h1>Uzbek</h1>
+                    <p>
+                        Uzbek national clothes
+                    </p>
+                    <div class="flexSpans">
+                        <span class="filename">filename - </span>
+                        <span class="type" style="color: #fff;">uzbekclothes.json</span>
+                    </div>
+                    <div class="flexSpans">
+                        <span class="rows">rows - </span>
+                        <span class="num" style="color: #fff;">105</span>
+                    </div>
+
+                    <div class="btns">
+                        <a href="./json/uzbekclothes.json" download="">Start download</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
